--- a/app/desktop/desktop-style.qrc
+++ b/app/desktop/desktop-style.qrc
@@ -1,5 +1,3 @@
 <RCC>
-    <qresource prefix="/">
-        <file>desktop-icon-view.qss</file>
-    </qresource>
+    <qresource prefix="/"/>
 </RCC>
