--- a/app/desktop/desktop-style.qrc
+++ b/app/desktop/desktop-style.qrc
@@ -1,3 +1,5 @@
 <RCC>
-    <qresource prefix="/"/>
+    <qresource prefix="/">
+        <file>desktop-icon-view.qss</file>
+    </qresource>
 </RCC>
